--- a/tp3.html
+++ b/tp3.html
@@ -1,20 +1,57 @@
 <html>
   <head>
+    <link rel="stylesheet" href="css/main.css">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   </head>
   <body onload='main()'>
     <div class="row">
-        <div class="col s8">   
-          <canvas id='dawin-webgl' width=800 height=800>
-            Utilisez un navigateur compatible avec WebGL
-          </canvas>
-        </div>
-        <div class="col s4">
-          <div class="row">Pannel slides</div>
-          <p class="range-field">
-              <input type="range" id="slider" min="0" max="100" />
-              <input type="range" id="sliderTest" min="-3.14" max="3.14" step="0.01"/>
+        <canvas id='dawin-webgl' class="col s8">
+          Utilisez un navigateur compatible avec WebGL
+        </canvas>
+        <div class="setting-col col s4">
+          <h3 class="row center-align">- - Settings - -</h3>
+            <h5>Rotation</h5>
+
+            <div class="row valign-wrapper">
+              <span class="col s1 center-align">X</span>
+              <p class="range-field col s11">
+                <input type="range" id="rotateX" min="-3.14" max="3.14" step="0.01"/>
+              </p>
+            </div>
+            <div class="row valign-wrapper">
+              <span class="col s1 center-align">Y</span>
+              <p class="range-field col s11">
+                <input type="range" id="rotateY" min="-3.14" max="3.14" step="0.01"/>
+              </p>
+            </div>
+            <div class="row valign-wrapper">
+              <span class="col s1 center-align">Z</span>
+              <p class="range-field col s11">
+                <input type="range" id="rotateZ" min="-3.14" max="3.14" step="0.01"/>
+              </p>
+            </div>
+
+            <h5>Translation</h5>
+
+            <div class="row valign-wrapper">
+              <span class="col s1 center-align">X</span>
+              <p class="range-field col s11">
+                <input type="range" id="translateX" min="-10" max="10" step="0.1"/>
+              </p>
+            </div>
+            <div class="row valign-wrapper">
+              <span class="col s1 center-align">Y</span>
+              <p class="range-field col s11">
+                <input type="range" id="translateY" min="-10" max="10" step="0.1"/>
+              </p>
+            </div>
+            <div class="row valign-wrapper">
+              <span class="col s1 center-align">Z</span>
+              <p class="range-field col s11">
+                <input type="range" id="translateZ" min="-10" max="10" step="0.1"/>
+              </p>
+            </div>
           </p>
         </div>
       </div>
