--- a/tp3.html
+++ b/tp3.html
@@ -6,55 +6,68 @@
   </head>
   <body onload='main()'>
     <div class="row">
-        <canvas id='dawin-webgl' class="col s8">
-          Utilisez un navigateur compatible avec WebGL
-        </canvas>
-        <div class="setting-col col s4">
-          <h3 class="row center-align">- - Settings - -</h3>
-            <h5>Rotation</h5>
+      <canvas id='dawin-webgl' class="col s8">
+        Utilisez un navigateur compatible avec WebGL
+      </canvas>
+      <div class="setting-col col s4">
+        <h3 class="row center-align">- - Settings - -</h3>
+        <a class="waves-effect waves-light btn red lighten-1" id="reset">Reset</a>
+        <h5>Rotation</h5>
 
-            <div class="row valign-wrapper">
-              <span class="col s1 center-align">X</span>
-              <p class="range-field col s11">
-                <input type="range" id="rotateX" min="-3.14" max="3.14" step="0.01"/>
-              </p>
-            </div>
-            <div class="row valign-wrapper">
-              <span class="col s1 center-align">Y</span>
-              <p class="range-field col s11">
-                <input type="range" id="rotateY" min="-3.14" max="3.14" step="0.01"/>
-              </p>
-            </div>
-            <div class="row valign-wrapper">
-              <span class="col s1 center-align">Z</span>
-              <p class="range-field col s11">
-                <input type="range" id="rotateZ" min="-3.14" max="3.14" step="0.01"/>
-              </p>
-            </div>
+        <div class="row valign-wrapper">
+          <span class="col s2 center-align">X</span>
+          <p class="range-field col s10">
+            <input type="range" id="rotateX" min="-3.14" max="3.14" step="0.01"/>
+          </p>
+        </div>
+        <div class="row valign-wrapper">
+          <span class="col s2 center-align">Y</span>
+          <p class="range-field col s10">
+            <input type="range" id="rotateY" min="-3.14" max="3.14" step="0.01"/>
+          </p>
+        </div>
+        <div class="row valign-wrapper">
+          <span class="col s2 center-align">Z</span>
+          <p class="range-field col s10">
+            <input type="range" id="rotateZ" min="-3.14" max="3.14" step="0.01"/>
+          </p>
+        </div>
 
-            <h5>Translation</h5>
+        <h5>Translation</h5>
 
-            <div class="row valign-wrapper">
-              <span class="col s1 center-align">X</span>
-              <p class="range-field col s11">
-                <input type="range" id="translateX" min="-10" max="10" step="0.1"/>
-              </p>
-            </div>
-            <div class="row valign-wrapper">
-              <span class="col s1 center-align">Y</span>
-              <p class="range-field col s11">
-                <input type="range" id="translateY" min="-10" max="10" step="0.1"/>
-              </p>
-            </div>
-            <div class="row valign-wrapper">
-              <span class="col s1 center-align">Z</span>
-              <p class="range-field col s11">
-                <input type="range" id="translateZ" min="-10" max="10" step="0.1"/>
-              </p>
-            </div>
+        <div class="row valign-wrapper">
+          <span class="col s2 center-align">X</span>
+          <p class="range-field col s10">
+            <input type="range" id="translateX" min="-10" max="10" step="0.1"/>
+          </p>
+        </div>
+        <div class="row valign-wrapper">
+          <span class="col s2 center-align">Y</span>
+          <p class="range-field col s10">
+            <input type="range" id="translateY" min="-10" max="10" step="0.1"/>
+          </p>
+        </div>
+        <div class="row valign-wrapper">
+          <span class="col s2 center-align">Z</span>
+          <p class="range-field col s10">
+            <input type="range" id="translateZ" min="-10" max="10" step="0.1"/>
+          </p>
+        </div>
+        <h5>Caméra</h5>
+        <div class="row valign-wrapper">
+          <span class="col s2 center-align">Zoom</span>
+          <p class="range-field col s10">
+            <input type="range" id="zoom" min="0.1" max="5" value="1" step="0.1"/>
+          </p>
+        </div>
+        <div class="row valign-wrapper">
+          <span class="col s2 center-align">FOV</span>
+          <p class="range-field col s10">
+            <input type="range" id="fov" min="30" max="120" step="1"/>
           </p>
         </div>
       </div>
+    </div>
     
     <script src='gl-matrix-min.js'></script>
     <script src='tp3.js'></script>
