color en fonction de la partie selectionné, selection de toute les partie avec une checkbox et alt sur un cube full

--- a/tp3.html
+++ b/tp3.html
@@ -70,23 +70,26 @@
             <div id="color-picker-container"></div>
           </div>
           <div class="choices-container col s4">
-            <p>color : <span class="colorValue"></span></p>
+            <p>color : <span class="colorValue">#Random</span></p>
             <div>
-              <div></div>
+              <label>
+                <input type="checkbox" class="filled-in" id="selectAll"/>
+                <span class="truncate">Cube entier</span>
+              </label>
               <div>
                 <div class="row">
-                  <div data-id="1" class="part cube-top col s4 offset-s4 center-align valign-wrapper"><div class="truncate">TOP</div></div>
+                  <div data-id="0" class="part cube-top col s4 offset-s4 center-align valign-wrapper"><div class="truncate">TOP</div></div>
                 </div>
                 <div class="row">
-                  <div data-id="2" class="part cube-left col s4 center-align valign-wrapper"><div class="truncate">LEFT</div></div>
-                  <div data-id="3" class="part cube-front col s4 center-align valign-wrapper"><div class="truncate">FRONT</div></div>
-                  <div data-id="4" class="part cube-right col s4 center-align valign-wrapper"><div class="truncate">RIGHT</div></div>
+                  <div data-id="1" class="part cube-left col s4 center-align valign-wrapper"><div class="truncate">LEFT</div></div>
+                  <div data-id="2" class="part cube-front col s4 center-align valign-wrapper"><div class="truncate">FRONT</div></div>
+                  <div data-id="3" class="part cube-right col s4 center-align valign-wrapper"><div class="truncate">RIGHT</div></div>
                 </div>
                 <div class="row">
-                  <div data-id="5" class="part cube-bottom col s4 offset-s4 center-align valign-wrapper"><div class="truncate">DOWN</div></div>
+                  <div data-id="4" class="part cube-bottom col s4 offset-s4 center-align valign-wrapper"><div class="truncate">DOWN</div></div>
                 </div>
                 <div class="row">
-                  <div data-id="6" class="part cube-back col s4 offset-s4 center-align valign-wrapper"><div class="truncate">BACK</div></div>
+                  <div data-id="5" class="part cube-back col s4 offset-s4 center-align valign-wrapper"><div class="truncate">BACK</div></div>
                 </div>
               </div>
             </div>
