--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src='gl-matrix-min.js'></script>
     <script src='dist/iro.min.js'></script>
-    <script src='tp3.js'></script>
+    <script src='script.js'></script>
           
   </body>
 </html>	
